deployment-folder-master/aws/food-catalogue-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodcatalogueapp
  labels:
    app: foodcatalogueapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foodcatalogueapp
  template:
    metadata:
      labels:
        app: foodcatalogueapp
    spec:
      containers:
        - name: foodcatalogueapp
          image: denishpcinfo/food-catalogue-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9092
---

apiVersion: v1
kind: Service
metadata:
  name: foodcatalogue-service
spec:
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
  selector:
    app: foodcatalogueapp
